--- a/rank.html
+++ b/rank.html
@@ -36,7 +36,7 @@
                 <a class="nav-link active" href="rank.html">Ranklist</a>
                </li>
                <li class="nav-item">
-                <a class="nav-link active" href="#">Signup</a>
+                <a class="nav-link active" href="login.html">Signup</a>
                </li>
             </ul>
         </div>
