--- a/intermediate.html
+++ b/intermediate.html
@@ -9,16 +9,17 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="css/rules.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+    
 
 </head>
-<body>
+<body onload="myfunction()">
     <div class=" container-fluid rules">
-        <p style="font-size:5rem;color:aliceblue; text-align: center;margin-bottom: 0%;">Money Heist</p>
+        <p style="font-size:5rem;color:aliceblue; text-align: center;margin-bottom: 0%;">Stranger things</p>
         <p style="font-size:3rem;color: aliceblue;text-align: center;margin-bottom: 0%; ">Ready to test your knowledge?</p>
         <div class=" rule-list">
         <ul>
         
-        <li class="rule">This quiz consists of total 10 questions.</li>
+        <li class="rule" id="qns">This quiz consists of total 10 questions.</li>
         <li class="rule">Each question carries 5 marks.No negative marks for wrong answers.</li>
         <li class="rule">You can select answer by clicking on the option button</li>
         <li class="rule">Questions are multiple choice.</li>
@@ -32,5 +33,6 @@
 
 
     </div>
+    <script src="intermediate.js"></script>
 </body>
 </html>
