--- a/login.html
+++ b/login.html
@@ -24,7 +24,7 @@
                 <a href="#" class="form__link">Forgot your password?</a>
             </p>
             <p class="form__text">
-                <a class="form__link" href="./" id="linkCreateAccount">Don't have an account? Create account</a>
+                <a class="form__link" href="signin.html" id="linkCreateAccount">Don't have an account? Create account</a>
             </p>
         </form>
         </div>
