--- a/rank.html
+++ b/rank.html
@@ -26,15 +26,16 @@
                <li class="nav-item">
                 <a class="nav-link active" href="index.html">Home</a>
                </li>
-               <li class="nav-item">
-                <a class="nav-link active" href="#">About</a>
-               </li>
+               
                <li class="nav-item">
                 <a class="nav-link active" href="quiz.html">Quizes</a>
                </li>
                <li class="nav-item">
                 <a class="nav-link active" href="rank.html">Ranklist</a>
                </li>
+               <li class="nav-item">
+                  <a class="nav-link active" href="aboutus.html">About</a>
+                 </li>
                <li class="nav-item">
                 <a class="nav-link active" href="login.html">Signup</a>
                </li>
@@ -82,43 +83,43 @@
             <p>#4</p>
             <img class="otherimages" src="images/avatar.jpg" alt="" srcset="">
             <p>PLAYER</p>
-            <p>100 POINTS</p>
+            <p>200 POINTS</p>
          </div>
          <div class="otherplayer">
-            <p>#4</p>
+            <p>#5</p>
+            <img class="otherimages" src="images/avatar.jpg" alt="" srcset="">
+            <p>PLAYER</p>
+            <p>150 POINTS</p>
+         </div>
+         <div class="otherplayer">
+            <p>#6</p>
+            <img class="otherimages" src="images/avatar.jpg" alt="" srcset="">
+            <p>PLAYER</p>
+            <p>120 POINTS</p>
+         </div>
+         <div class="otherplayer">
+            <p>#7</p>
             <img class="otherimages" src="images/avatar.jpg" alt="" srcset="">
             <p>PLAYER</p>
             <p>100 POINTS</p>
          </div>
          <div class="otherplayer">
-            <p>#4</p>
+            <p>#8</p>
             <img class="otherimages" src="images/avatar.jpg" alt="" srcset="">
             <p>PLAYER</p>
-            <p>100 POINTS</p>
+            <p>80 POINTS</p>
          </div>
          <div class="otherplayer">
-            <p>#4</p>
+            <p>#9</p>
             <img class="otherimages" src="images/avatar.jpg" alt="" srcset="">
             <p>PLAYER</p>
-            <p>100 POINTS</p>
+            <p>75 POINTS</p>
          </div>
          <div class="otherplayer">
-            <p>#4</p>
+            <p>#10</p>
             <img class="otherimages" src="images/avatar.jpg" alt="" srcset="">
             <p>PLAYER</p>
-            <p>100 POINTS</p>
-         </div>
-         <div class="otherplayer">
-            <p>#4</p>
-            <img class="otherimages" src="images/avatar.jpg" alt="" srcset="">
-            <p>PLAYER</p>
-            <p>100 POINTS</p>
-         </div>
-         <div class="otherplayer">
-            <p>#4</p>
-            <img class="otherimages" src="images/avatar.jpg" alt="" srcset="">
-            <p>PLAYER</p>
-            <p>100 POINTS</p>
+            <p>70 POINTS</p>
          </div>
 
      </div>
