--- a/index.html
+++ b/index.html
@@ -30,14 +30,15 @@
            <li class="nav-item">
             <a class="nav-link active" href="index.html">Home</a>
            </li>
-           <li class="nav-item">
-            <a class="nav-link active" href="#">About</a>
-           </li>
+           
            <li class="nav-item">
             <a class="nav-link active" href="quiz.html">Quizes</a>
            </li>
            <li class="nav-item">
             <a class="nav-link active" href="rank.html">Ranklist</a>
+           </li>
+           <li class="nav-item">
+            <a class="nav-link active" href="aboutus.html">About</a>
            </li>
            <li class="nav-item">
             <a class="nav-link active" href="login.html">Signup</a>
@@ -75,7 +76,7 @@
         <div class="box box3">
             <i class="fa-sharp fa-solid fa-gifts ficon"></i><br>
                 <span class="featureheading">Win exciting prizes</span><br><br>
-                <span class="text">The top three people in ranklist will get prizes</span>
+                <span class="text"> Top three people in the ranklist will get prizes</span>
         </div>
     </div>
   </div>
