--- a/quiz.html
+++ b/quiz.html
@@ -26,14 +26,15 @@
            <li class="nav-item">
             <a class="nav-link active" href="index.html">Home</a>
            </li>
-           <li class="nav-item">
-            <a class="nav-link active" href="#">About</a>
-           </li>
+           
            <li class="nav-item">
             <a class="nav-link active" href="quiz.html">Quizes</a>
            </li>
            <li class="nav-item">
             <a class="nav-link active" href="rank.html">Ranklist</a>
+           </li>
+           <li class="nav-item">
+            <a class="nav-link active" href="aboutus.html">About</a>
            </li>
            <li class="nav-item">
             <a class="nav-link active" href="login.html">Signup</a>
