--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
            </li>
            
            <li class="nav-item">
-            <a class="nav-link active" href="quiz.html">Quizes</a>
+            <a class="nav-link active" href="quiz.php">Quizes</a>
            </li>
            <li class="nav-item">
-            <a class="nav-link active" href="rank.html">Ranklist</a>
+            <a class="nav-link active" href="rank.php">Ranklist</a>
            </li>
            <li class="nav-item">
             <a class="nav-link active" href="aboutus.html">About</a>
            </li>
            <li class="nav-item">
-            <a class="nav-link active" href="login.html">Signup</a>
+            <a class="nav-link active" href="profile.php">Signup</a>
            </li>
         </ul>
     </div>
