--- a/aboutus.html
+++ b/aboutus.html
@@ -18,16 +18,16 @@
                </li>
                
                <li class="nav-item">
-                <a class="nav-link active" href="quiz.html">Quizes</a>
+                <a class="nav-link active" href="quiz.php">Quizes</a>
                </li>
                <li class="nav-item">
-                <a class="nav-link active" href="rank.html">Ranklist</a>
+                <a class="nav-link active" href="rank.php">Ranklist</a>
                </li>
                <li class="nav-item">
                 <a class="nav-link active" href="aboutus.html">About</a>
                </li>
                <li class="nav-item">
-                <a class="nav-link active" href="login.html">Signup</a>
+                <a class="nav-link active" href="profile.php">Profile</a>
                </li>
             </ul>
         </div>
